--- a/index.css
+++ b/index.css
@@ -115,7 +115,8 @@ input[type="radio"]{
 /* modal */
 
 .meme-modal{
-    display: none; /*flex when displayed*/
+    display: none; 
+    /* display: flex; flex when displayed */
     position: fixed;
     margin: auto;
     top: 80px;
